# Todoee-Dev-Preview

./: .gitignore  Cargo.toml  README.md  codebase_analysis.md
crates/todoee-cli/: Cargo.toml
crates/todoee-cli/src/: lib.rs  main.rs
crates/todoee-cli/src/commands/: add.rs  batch.rs  config.rs  daemon.rs  delete.rs  diff.rs  done.rs  edit.rs  export.rs  focus.rs  gc.rs  head.rs  help.rs  import.rs  insights.rs  list.rs  log.rs  mod.rs  now.rs  redo.rs  search.rs  show.rs  stash.rs  sync.rs  undo.rs  upcoming.rs
crates/todoee-cli/src/tui/: app.rs  event.rs  handler.rs  mod.rs  spinner.rs  terminal.rs  theme.rs  ui.rs
crates/todoee-cli/src/tui/widgets/: category_list.rs  focus.rs  insights.rs  mod.rs  settings.rs  todo_add.rs  todo_detail.rs  todo_editor.rs
crates/todoee-core/: Cargo.toml
crates/todoee-core/src/: ai.rs  config.rs  db.rs  error.rs  lib.rs  models.rs  sync.rs
crates/todoee-core/src/db/: local.rs  mod.rs  remote.rs
crates/todoee-core/tests/: integration.rs  sync_integration.rs
crates/todoee-daemon/: Cargo.toml
crates/todoee-daemon/src/: main.rs
docs/plans/: 2026-01-30-git-like-developer-commands.md  2026-01-30-interactive-tui.md  2026-01-30-modern-saas-features.md  2026-01-30-production-readiness-review.md  2026-01-30-todoee-mvp.md  2026-01-30-tui-full-add-mode.md  2026-01-30-tui-full-features.md  2026-01-30-tui-integration.md  2026-01-30-tui-ux-enhancements.md  2026-01-30-unified-roadmap.md  2026-01-31-loading-animations-ui-polish.md  2026-01-31-logic-safeguards.md  2026-01-31-offline-first-ai-opt-in.md
