[package]
name = "todoee-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "todoee"
path = "src/main.rs"

[dependencies]
todoee-core = { path = "../todoee-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
