[package]
name = "todoee-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono", "json"] }
reqwest = { version = "0.12", features = ["json"] }
argon2 = "0.5"
jsonwebtoken = "9"
toml = "0.8"
dirs = "6"

[dev-dependencies]
tokio-test = "0.4"
